fix horizontal scrollbark being to thicck

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 * {
   scrollbar-width: thin;
   scrollbar-color: var(--thumbBG) var(--scrollbarBG);
-  &::-webkit-scrollbar { width: 8px; }
+  &::-webkit-scrollbar { width: 8px; height: 8px; }
   &::-webkit-scrollbar-track { background: transparent; }
   &::-webkit-scrollbar-thumb { background-color: var(--thumbBG); border-radius: 10px; }
 }
